16 February 2007
+ Added translate functions.
+ Removed object contructor references.