@@ -98,11 +98,9 @@ class PHPWS_Panel_Link {
         }
 
         if (is_file($this->image)) {
-            translate('controlpanel');
             $image = sprintf('<img src="%s" border="0" title="%s" alt="%s" />',
                              $this->image, $this->getLabel(),
                              sprintf(_('%s module icon'), $this->getLabel()));
-            translate();
         } else {
             return NULL;
         }
