@@ -1,9 +1,13 @@
 <?php
-define("CP_DEFAULT_PANEL", "panel.tpl");
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
+define('CP_DEFAULT_PANEL', 'panel.tpl');
 
-define("CP_BAD_TABS",      -1);
-define("CP_MISSING_TITLE", -2);
-define("CP_MISSING_LINK",  -3);
-define("CP_NO_TABS",       -4);
+define('CP_BAD_TABS',      -1);
+define('CP_MISSING_TITLE', -2);
+define('CP_MISSING_LINK',  -3);
+define('CP_NO_TABS',       -4);
 
 ?>
