@@ -1,4 +1,8 @@
 <?php
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
 
 PHPWS_Core::initModClass('controlpanel', 'ControlPanel.php');
 
