@@ -9,7 +9,7 @@ if (!defined('PHPWS_SOURCE_DIR')) {
     include '../../config/core/404.html';
     exit();
  }
-
+translate('controlpanel');
 if (isset($_GET['cp_image_toggle'])){
     PHPWS_ControlPanel_Tab::toggleImage($_GET['tab']);
  }
@@ -27,6 +27,6 @@ if (isset($_REQUEST['action'])){
  } elseif ($_SESSION['User']->isLogged()){
      Layout::add(PHPWS_ControlPanel::display());
  }
-
+translate();
 
 ?>
